<resources>
    <string name="app_name">Kola</string>
    <string name="slogan_text">Better manage your money transaction\n and enhance your growth.</string>
    <string name="logo_content_desc">application logo</string>
    <string name="login">Login</string>
    <string name="login_hint">Phone Number</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="signature_text">Powered by kola</string>
    <string name="log_in">Log in</string>
    <string name="deposit_transaction">Deposit transaction</string>
    <string name="currency">XAF</string>
    <string name="group_image">Group Image</string>
    <string name="add_contribution">Add contribution</string>
    <string name="amount">Amount</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="create_goal_saving">Create goal saving</string>
    <string name="upload_image">upload image</string>
    <string name="group_name">Saving Goal Name</string>
    <string name="goal_amount">Goal Amount</string>
    <string name="due_date">Due Date</string>
    <string name="saving_goal_description">Saving Goal Description</string>
    <string name="add_members">Add members</string>
    <string name="goal">Goal</string>
    <string name="contribute">Contribute</string>
    <string name="contributed">Contributed</string>
    <string name="all_transactions">All transactions</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="total">Total</string>
    <string name="money">Money</string>
    <string name="exit">Exit</string>
    <string name="balance">Balance</string>
    <string name="deposit">Deposit</string>
    <string name="tranfer">Tranfer</string>
    <string name="credit">Credit</string>
    <string name="internet">Internet</string>
    <string name="view_all">View all</string>
    <string name="awesome_coins">Awesome coins</string>
    <string name="group">Group</string>
    <string name="paid">Paid</string>
    <string name="to_pay">To Pay</string>
    <string name="add_new_goal">Add new goal</string>
    <string name="remaining">Remaining</string>
    <string name="withdraw">Withdraw</string>
    <string name="user_name">Nom et prénom</string>
    <string name="save">Enregistrer</string>
    <string name="set_profile_hint">Veuillez entrer votre nom et choisir une photo de profil</string>
    <string name="enter_code">Entrez le code</string>
    <string name="validate">Valider</string>
    <string name="change_phone_number">Changer le numero de téléphone</string>
    <string name="field_mandatory">Veuillez remplir ce champ</string>
    <string name="loading">Loading...</string>
    <string name="_0">0</string>
</resources>