<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.create_goal.CreateGoalActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:titleTextColor="@color/grey_80"
        app:title="@string/create_goal_saving"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/large_space"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/large_space"/>
            <RelativeLayout
                android:layout_width="100dp"
                android:layout_height="100dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/groupImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/circle_box"/>
                <ImageView
                    android:id="@+id/uploadImage"
                    android:alpha="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_baseline_photo_camera_24"
                    android:contentDescription="@string/upload_image"/>
            </RelativeLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="40dp"/>
            <EditText
                android:id="@+id/editGroupName"
                android:layout_width="match_parent"
                android:inputType="text"
                style="@style/defaultEditTextStyle"
                tools:ignore="Autofill"
                android:hint="@string/group_name"/>
            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/large_space"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/editGoalAmount"
                    android:layout_width="0dp"
                    style="@style/defaultEditTextStyle"
                    android:inputType="phone"
                    android:layout_weight="1"
                    android:hint="@string/goal_amount"
                    tools:ignore="Autofill" />
                <View
                    android:layout_width="@dimen/medium_space"
                    android:layout_height="0dp"/>
                <EditText
                    android:id="@+id/editGoalDueDate"
                    android:layout_width="0dp"
                    style="@style/defaultEditTextStyle"
                    android:inputType="date"
                    android:focusable="false"
                    android:layout_weight="1"
                    android:hint="@string/due_date"
                    android:drawableEnd="@drawable/ic_feather_calendar"
                    tools:ignore="Autofill" />
            </LinearLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/large_space"/>
            <EditText
                android:id="@+id/editGroupDescription"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:inputType="textMultiLine"
                android:gravity="start"
                android:paddingVertical="@dimen/medium_space"
                style="@style/defaultEditTextStyle"
                tools:ignore="Autofill"
                android:hint="@string/saving_goal_description"/>
            <View
                android:layout_width="0dp"
                android:layout_height="40dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonConfirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/gradient_background_radius_4"
                android:text="@string/confirm"
                style="@style/buttonTextStyle"/>
            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/large_space"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>