<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/large_space"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@drawable/gradient_background_radius_16"
                android:layout_marginHorizontal="@dimen/large_space"
                android:layout_height="200dp">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:src="@drawable/ic_awesome_coins"
                    android:layout_marginStart="-10dp"
                    android:layout_marginBottom="-10dp"
                    android:contentDescription="@string/awesome_coins"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/large_space">
                    <TextView
                        android:id="@+id/groupText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/whiteMainText"
                        android:text="@string/group"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"/>
                    <TextView
                        android:id="@+id/numberOfGroups"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/whiteMainText"
                        app:layout_constraintTop_toBottomOf="@id/groupText"
                        app:layout_constraintStart_toStartOf="@id/groupText"
                        app:layout_constraintEnd_toEndOf="@id/groupText"
                        android:layout_marginTop="@dimen/medium_space"
                        tools:text="5"/>

                    <TextView
                        android:id="@+id/paidTextHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paid"
                        android:textColor="@color/white"
                        android:alpha="0.6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="@id/groupText"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/paidText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/whiteMainText"
                        tools:text="1.000"
                        app:layout_constraintTop_toBottomOf="@id/paidTextHint"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <TextView
                        android:id="@+id/toPayTextHint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_pay"
                        android:textColor="@color/white"
                        android:alpha="0.6"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/paidText"
                        android:layout_marginTop="@dimen/medium_space"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/toPayText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/whiteMainText"
                        tools:text="1.500"
                        app:layout_constraintTop_toBottomOf="@id/toPayTextHint"
                        app:layout_constraintEnd_toEndOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </RelativeLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="40dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/groupsList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_group"
                android:nestedScrollingEnabled="false"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_new_goal"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/colorPrimaryDark"
        android:layout_margin="@dimen/large_space"/>
</androidx.constraintlayout.widget.ConstraintLayout>